--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"></noscript>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="map.css" />
@@ -21,13 +22,16 @@
 </head>
 
 <body>
+    <div id="splash-screen">
+        <img src="logo.png" alt="Casa Plastica Logo" class="splash-logo">
+    </div>
     <header id="header">
         <nav>
             <a href="#" data-page="home"><img src="logo.png" alt="Casa Plastica" class="logo"></a>
             <ul>
                 <li><a href="#" data-page="home">Home</a></li>
+                <li><a href="#" data-page="servicos">Projetos</a></li>
                 <li><a href="#" data-page="sobre">Sobre</a></li>
-                <li><a href="#" data-page="servicos">Serviços</a></li>
                 <li><a href="#" data-page="contato">Contato</a></li>
                 <!-- <li><a href="#" data-page="map-section">Mapa</a></li> -->
             </ul>
@@ -36,35 +40,59 @@
 
     <main id="main" class="container">
         <section id="home">
-            <h2>Bem-vindo à Casa Plastica</h2>
-            <p>Desafie a poluição plástica conosco.</p>
-            <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, promovendo a sustentabilidade e a preservação do meio ambiente.</p>
-            <p>Explore nosso site para saber mais sobre nossos serviços, produtos e iniciativas.</p>
+            <h2>O futuro da reciclagem é descentralizado</h2>
+            <p>Desafie a poluição plástica conosco.
+                Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, 
+                promovendo a sustentabilidade e a preservação do meio ambiente.
+                Explore nosso site para saber mais sobre nossos serviços, 
+                produtos e iniciativas.</p>
         </section>
         
         <section id="sobre" class="hidden">
             <h2>Sobre Nós</h2>
             <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a sustentabilidade.</p>
-            <p>Nosso projeto surgiu e segue com a ideia de construir uma casa feita inteiramente de plásticos retirados dos oceanos, mas evoluímos para muito mais.</p>
-            <p>Desenvolvemos uma linha de máquinas e ferramentas para a reciclagem ser acessível a todos.</p>
-            <p>Atualmente, desenvolvemos tecnologias e soluções para reciclagem em pequena escala, trabalhando em parceria com outras empresas, oferecendo consultorias, workshops e palestras sobre sustentabilidade e reciclagem de plásticos.</p>
-            <p>Estamos comprometidos em tornar o mundo um lugar mais limpo e sustentável para as gerações futuras.</p>
+            <p>Idealizado em 2019 com a intenção inicial de
+                construir a primeira casa inteiramente feita com
+                plástico oceânico, a Casa Plástica nasceu para
+                visibilizar a importância de uma maior consciência
+                sobre o uso de plástico, material de uso - muitas
+                vezes - único e de devastadora abundância por
+                todos os cantos do planeta.
+                Cumprimos a nossa missão por meio da união da
+                criatividade, da tecnologia e da educação sobre
+                sustentabilidade e o poder da reciclagem de
+                materiais residuais começando pelo quintal de
+                casa, praia de Saquarema.
+            </p>
         </section>
 
         <section id="servicos" class="hidden">
-            <h2>Nossos Serviços</h2>
-            <ul>
+            <h2>Soluções com Inovação</h2>
+            <p>Desenvolvemos soluções com design inteligente
+                e acessíveis para o manejo individual e coletivo
+                do plástico reutilizável, seja ele qual for.
+                Prestamos Consultoria de Experiências
+                Sustentáveis, promovendo conteúdos, trilhas
+                educacionais e artísticas, eventos sustentáveis,
+                workshops, projetos relacionados à inovação em
+                meio ambiente, em específico ao plástico
+                oceânico, experiências imersivas, material
+                gráfico, audiovisual, palestras e apresentações
+                para todas as idades sobre como recolher e
+                transformar plástico usado e descartado no
+                oceano em material útil à longo prazo.</p>
+            <!-- <ul>
                 <li>Construção de máquinas de reciclagem de plástico sob demanda: Desenvolvemos máquinas de reciclagem de plástico customizadas e trabalhamos no desenvolvimento da Nomad, que são projetadas para oferecer soluções práticas e acessíveis para o problema da poluição plástica.</li>
                 <li>Palestras e apresentações sobre sustentabilidade e reciclagem de plásticos: Promovemos a conscientização ambiental oferecendo palestras e apresentações sobre sustentabilidade, reciclagem de plásticos e o uso de tecnologias inovadoras para lidar com esses desafios.</li>
-            </ul>
+            </ul> -->
         </section>
 
         <section id="contato" class="hidden">
             <h2>Entre em Contato</h2>
-            <p>Entre em contato pelo <a href="https://wa.me/5522997747785">WhatsApp</a></p>
-            <p>Ou nos escreva um <a href="mailto:pedrolucasp@gmail.com">email</a></p>
-            <p>E siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
-        </section>
+            <!-- <p>Entre em contato pelo <a href="https://wa.me/5522997747785">WhatsApp</a></p> -->
+            <p>Entre em contato pelo nosso <a href="mailto:projetocasaplastica@gmail.com">email</a></p>
+            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
+        </section> 
 
         <section id="map-section" class="hidden">
             <h2>Pontos de reciclagem</h2>
