add hero images

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
+    <meta name="description"
+        content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
 
     <title>Casa Plastica</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"></noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+    </noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
@@ -41,16 +45,20 @@
     <main id="main" class="container">
         <section id="home">
             <h2>O futuro da reciclagem é descentralizado</h2>
-            <p>Desafie a poluição plástica conosco.
-                Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos, 
+            <img src="/media/hero-1.jpg" class="hero-image" />
+            <p>Desafie a poluição plástica conosco.</p>
+            <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos,
                 promovendo a sustentabilidade e a preservação do meio ambiente.
-                Explore nosso site para saber mais sobre nossos serviços, 
+                Explore nosso site para saber mais sobre nossos serviços,
                 produtos e iniciativas.</p>
         </section>
-        
+
         <section id="sobre" class="hidden">
             <h2>Sobre Nós</h2>
-            <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a sustentabilidade.</p>
+            <img src="/media/hero-2.jpg" class="hero-image" />
+            <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a
+                sustentabilidade.</p>
+
             <p>Idealizado em 2019 com a intenção inicial de
                 construir a primeira casa inteiramente feita com
                 plástico oceânico, a Casa Plástica nasceu para
@@ -68,9 +76,12 @@
 
         <section id="servicos" class="hidden">
             <h2>Soluções com Inovação</h2>
+            <img src="/media/hero-3.jpg" class="hero-image" />
             <p>Desenvolvemos soluções com design inteligente
                 e acessíveis para o manejo individual e coletivo
-                do plástico reutilizável, seja ele qual for.
+                do plástico reutilizável, seja ele qual for.</p>
+
+            <p>
                 Prestamos Consultoria de Experiências
                 Sustentáveis, promovendo conteúdos, trilhas
                 educacionais e artísticas, eventos sustentáveis,
@@ -89,10 +100,13 @@
 
         <section id="contato" class="hidden">
             <h2>Entre em Contato</h2>
+            <img src="/media/hero-4.jpg" class="hero-image" />
+
             <!-- <p>Entre em contato pelo <a href="https://wa.me/5522997747785">WhatsApp</a></p> -->
             <p>Entre em contato pelo nosso <a href="mailto:projetocasaplastica@gmail.com">email</a></p>
-            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica" target="_blank">@projetocasaplastica</a></p>
-        </section> 
+            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica"
+                    target="_blank">@projetocasaplastica</a></p>
+        </section>
 
         <section id="map-section" class="hidden">
             <h2>Pontos de reciclagem</h2>
@@ -115,7 +129,8 @@
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjAoAGCBYq6grg_aBga7w7DTnOhvCZFI8&libraries=places&loading=async"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjAoAGCBYq6grg_aBga7w7DTnOhvCZFI8&libraries=places&loading=async"></script>
     <script src="main.js"></script>
     <script src="map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
