--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
-
+    <meta name="google-site-verification" content="8Ds7XTj8rCqy9I93tGIylV6meUg8JKTWYfMa2q6hyCs" />
     <title>Casa Plastica</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
