--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <a href="#" data-page="home"><img src="logo.png" alt="Casa Plastica" class="logo"></a>
             <ul>
                 <li><a href="#" data-page="home">Home</a></li>
-                <li><a href="#" data-page="servicos">Projetos</a></li>
-                <li><a href="#" data-page="sobre">Sobre</a></li>
+                <li><a href="#" data-page="projects">Projetos</a></li>
+                <li><a href="#" data-page="about">Sobre</a></li>
                 <li><a href="#" data-page="contato">Contato</a></li>
                 <!-- <li><a href="#" data-page="map-section">Mapa</a></li> -->
             </ul>
@@ -53,7 +53,7 @@
                 produtos e iniciativas.</p>
         </section>
 
-        <section id="sobre" class="hidden">
+        <section id="about" class="hidden">
             <h2>Sobre Nós</h2>
             <img src="/media/hero-2.jpg" class="hero-image" />
             <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a
@@ -74,7 +74,7 @@
             </p>
         </section>
 
-        <section id="servicos" class="hidden">
+        <section id="projects" class="hidden">
             <h2>Soluções com Inovação</h2>
             <img src="/media/hero-3.jpg" class="hero-image" />
             <p>Desenvolvemos soluções com design inteligente
@@ -91,11 +91,13 @@
                 gráfico, audiovisual, palestras e apresentações
                 para todas as idades sobre como recolher e
                 transformar plástico usado e descartado no
-                oceano em material útil à longo prazo.</p>
-            <!-- <ul>
-                <li>Construção de máquinas de reciclagem de plástico sob demanda: Desenvolvemos máquinas de reciclagem de plástico customizadas e trabalhamos no desenvolvimento da Nomad, que são projetadas para oferecer soluções práticas e acessíveis para o problema da poluição plástica.</li>
-                <li>Palestras e apresentações sobre sustentabilidade e reciclagem de plásticos: Promovemos a conscientização ambiental oferecendo palestras e apresentações sobre sustentabilidade, reciclagem de plásticos e o uso de tecnologias inovadoras para lidar com esses desafios.</li>
-            </ul> -->
+                oceano em material útil à longo prazo.
+            </p>
+            <ul>
+                <li>
+                    <a src="/projects/mexirica.html">Mexirica Navegante</a>
+                </li>
+            </ul>
         </section>
 
         <section id="contato" class="hidden">
