mexirica user guide

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </p>
             <ul>
                 <li>
-                    <a src="/projects/mexirica.html">Mexirica Navegante</a>
+                    <a href="/projects/mexirica.html">Mexirica Navegante</a>
                 </li>
             </ul>
         </section>
