--- a/projects/mexirica.html
+++ b/projects/mexirica.html
@@ -19,6 +19,7 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="mexirica.styles.css">
 </head>
 
 <body>
@@ -36,8 +37,17 @@
 
     <main class="container">
         <section id="user-guide">
-            <h1>User Guide for "Mexirica Navegante"</h1>
             <h2>A 2-in-1 Shredder and Extrusion Machine</h2>
+            <h1>Mexirica Navegante</h1>
+            <h3>User Guide</h3>
+
+             <!-- Summary section with clickable links -->
+             <section id="summary">
+                <h3>Summary</h3>
+                <ul id="summary-list">
+                    <!-- JavaScript will populate this -->
+                </ul>
+            </section>
 
             <!-- The content will be injected here by JavaScript -->
             <div id="guide-content"></div>
