mexirica guide style

--- a/projects/mexirica.html
+++ b/projects/mexirica.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header id="header">
+    <!-- <header id="header">
         <nav>
             <a href="/"><img src="../logo.png" alt="Casa Plastica" class="logo"></a>
             <ul>
@@ -33,21 +33,21 @@
                 <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <main class="container">
         <section id="user-guide">
-            <h2>A 2-in-1 Shredder and Extrusion Machine</h2>
-            <h1>Mexirica Navegante</h1>
-            <h3>User Guide</h3>
-
-             <!-- Summary section with clickable links -->
-             <section id="summary">
-                <h3>Summary</h3>
+            <h2>Mexirica Navegante</h2>
+            <!-- <h1>A 2-in-1 Shredder and Extrusion Machine</h1> -->
+            
+            <!-- Summary section with clickable links -->
+            <div id="summary">
+                 <h3>User Guide</h3>
+                <!-- <h3>Summary</h3> -->
                 <ul id="summary-list">
                     <!-- JavaScript will populate this -->
                 </ul>
-            </section>
+            </div>
 
             <!-- The content will be injected here by JavaScript -->
             <div id="guide-content"></div>
