merica guide is live

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                 transformar plástico usado e descartado no
                 oceano em material útil à longo prazo.
             </p>
-            <ul>
-                <li>
-                    <a href="/projects/mexirica.html">Mexirica Navegante</a>
-                </li>
-            </ul>
+            <p>Clique para acessar
+                <a href="/projetos/mexirica-navegante/mexirica.html">
+                    <strong>o guia da Mexirica Navegante</strong>
+                </a>
+            </p>
         </section>
 
         <section id="contato" class="hidden">
