--- a/projetos/mexirica/manual.html
+++ b/projetos/mexirica/manual.html
@@ -67,8 +67,8 @@
             <div id="loader" style="display: none;">Carregando o documento traduzido...</div>
 
             <div class="english-guide">
-                <p>If you wish to view the guide in another language, select your preferred language from the dropdown
-                    below. The translated document will open in a new tab.</p>
+                <p>If you wish to view the guide in another language, select your preferred language from the dropdown.</p>
+                <p>The translated document will open in a new tab.</p>
             </div>
 
             <div id="feedback">
