--- a/projetos/mexirica/manual.html
+++ b/projetos/mexirica/manual.html
@@ -47,7 +47,7 @@
 
             <div class="language-selection">
                 <select id="language-select">
-                    <option value="pt">Português</option>
+                    <option value="pt-BR">Português</option>
                     <option value="en">Inglês (English)</option>
                     <option value="es">Espanhol (Spanish)</option>
                     <option value="fr">Francês (French)</option>
@@ -64,7 +64,9 @@
 
             </div>
             
-            <div id="loader" style="display: none;">Carregando o documento traduzido...</div>
+            <div id="loader" style="display: block;">
+                <small>Carregando o documento...</small>
+            </div>
 
             <div class="english-guide">
                 <p>If you wish to view the guide in another language, select your preferred language from the dropdown.</p>
