--- a/projetos/mexirica/manual.html
+++ b/projetos/mexirica/manual.html
@@ -64,7 +64,7 @@
 
             </div>
             
-            <div id="loader" style="display: block;">
+            <div id="loader" style="display: none;">
                 <small>Carregando o documento...</small>
             </div>
 
