--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 transformar plástico usado e descartado no
                 oceano em material útil à longo prazo.
             </p>
-            <p>Clique para acessar
-                <a href="/projetos/mexirica-navegante/mexirica.html">
-                    <strong>o guia da Mexirica Navegante</strong>
+            <p>Clique para acessar o
+                <a href="/projetos/mexirica/manual.html">
+                    <strong> guia da Mexirica Navegante</strong>
                 </a>
             </p>
         </section>
