--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Casa Plastica is dedicated to fighting plastic pollution and promoting sustainability through innovative recycling solutions. Explore our services and initiatives.">
+        content="Casa Plastica: Transformando o plástico em soluções sustentáveis. Conheça nossos projetos, ações e como estamos lutando contra a poluição oceânica.">
     <meta name="google-site-verification" content="8Ds7XTj8rCqy9I93tGIylV6meUg8JKTWYfMa2q6hyCs" />
-    <title>Casa Plastica</title>
+    <title>Casa Plastica | Sustentabilidade e Reciclagem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style"
@@ -17,125 +17,48 @@
     <noscript>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
     </noscript>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="map.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 
 <body>
-    <div id="splash-screen">
-        <img src="logo.png" alt="Casa Plastica Logo" class="splash-logo">
-    </div>
-    <header id="header">
-        <nav>
-            <a href="#" data-page="home"><img src="logo.png" alt="Casa Plastica" class="logo"></a>
-            <ul>
-                <li><a href="#" data-page="home">Home</a></li>
-                <li><a href="#" data-page="projects">Projetos</a></li>
-                <li><a href="#" data-page="about">Sobre</a></li>
-                <li><a href="#" data-page="contato">Contato</a></li>
-                <!-- <li><a href="#" data-page="map-section">Mapa</a></li> -->
-            </ul>
-        </nav>
-    </header>
+    <div id="header"></div>
 
-    <main id="main" class="container">
+    <main>
         <section id="home">
-            <h2>O futuro da reciclagem é descentralizado</h2>
-            <img src="/media/hero-1.jpg" class="hero-image" />
-            <p>Desafie a poluição plástica conosco.</p>
-            <p>Nós oferecemos soluções inovadoras e acessíveis para a reciclagem de plásticos,
-                promovendo a sustentabilidade e a preservação do meio ambiente.
-                Explore nosso site para saber mais sobre nossos serviços,
-                produtos e iniciativas.</p>
+            <h1>Transformando Plástico em Soluções Sustentáveis</h1>
+            <p>Somos a Casa Plastica, uma empresa dedicada à reciclagem de plásticos oceânicos e à criação de uma
+                economia circular. Unimos tecnologia, educação e inovação para empoderar comunidades e preservar o meio
+                ambiente.</p>
+            <a href="#about" class="btn">Saiba mais</a>
         </section>
 
-        <section id="about" class="hidden">
+        <section id="about">
             <h2>Sobre Nós</h2>
-            <img src="/media/hero-2.jpg" class="hero-image" />
-            <p>Somos a Casa Plastica, uma empresa empenhada em combater a poluição plástica e promover a
-                sustentabilidade.</p>
-
-            <p>Idealizado em 2019 com a intenção inicial de
-                construir a primeira casa inteiramente feita com
-                plástico oceânico, a Casa Plástica nasceu para
-                visibilizar a importância de uma maior consciência
-                sobre o uso de plástico, material de uso - muitas
-                vezes - único e de devastadora abundância por
-                todos os cantos do planeta.
-                Cumprimos a nossa missão por meio da união da
-                criatividade, da tecnologia e da educação sobre
-                sustentabilidade e o poder da reciclagem de
-                materiais residuais começando pelo quintal de
-                casa, praia de Saquarema.
-            </p>
+            <p>A Casa Plastica foi fundada em 2018 com o objetivo de enfrentar a poluição plástica e promover soluções
+                inovadoras para o meio ambiente. Desde então, atuamos em Saquarema e em outras localidades,
+                desenvolvendo tecnologias acessíveis para a reciclagem de plásticos e capacitando comunidades por meio
+                da educação ambiental.</p>
+            <a href="about.html" class="btn">Leia mais</a>
         </section>
 
-        <section id="projects" class="hidden">
-            <h2>Soluções com Inovação</h2>
-            <img src="/media/hero-3.jpg" class="hero-image" />
-            <p>Desenvolvemos soluções com design inteligente
-                e acessíveis para o manejo individual e coletivo
-                do plástico reutilizável, seja ele qual for.</p>
-
-            <p>
-                Prestamos Consultoria de Experiências
-                Sustentáveis, promovendo conteúdos, trilhas
-                educacionais e artísticas, eventos sustentáveis,
-                workshops, projetos relacionados à inovação em
-                meio ambiente, em específico ao plástico
-                oceânico, experiências imersivas, material
-                gráfico, audiovisual, palestras e apresentações
-                para todas as idades sobre como recolher e
-                transformar plástico usado e descartado no
-                oceano em material útil à longo prazo.
-            </p>
-            <p>Clique para acessar o
-                <a href="/projetos/mexirica/manual.html">
-                    <strong> guia da Mexirica Navegante</strong>
-                </a>
-            </p>
+        <section id="projects">
+            <h2>Projetos Recentes</h2>
+            <p>Conheça nossos principais projetos, como a construção de máquinas de reciclagem, workshops e eventos
+                focados em sustentabilidade.</p>
+            <a href="projects.html" class="btn">Veja nossos projetos</a>
         </section>
 
-        <section id="contato" class="hidden">
-            <h2>Entre em Contato</h2>
-            <img src="/media/hero-4.jpg" class="hero-image" />
-
-            <!-- <p>Entre em contato pelo <a href="https://wa.me/5522997747785">WhatsApp</a></p> -->
-            <p>Entre em contato pelo nosso <a href="mailto:projetocasaplastica@gmail.com">email</a></p>
-            <p>Siga-nos no Instagram: <a href="https://www.instagram.com/projetocasaplastica"
-                    target="_blank">@projetocasaplastica</a></p>
-        </section>
-
-        <section id="map-section" class="hidden">
-            <h2>Pontos de reciclagem</h2>
-            <div id="controls">
-                <input type="number" id="radius" name="radius" value="5" min="1" placeholder="Enter radius in km">
-                <button id="locationButton" class="custom-map-control-button">Encontre uma reciclagem próxima</button>
-            </div>
-            <div id="map-container">
-                <div id="results-panel"></div>
-                <div id="map"></div>
-            </div>
-            <p>Esta é uma ferramenta em desenvolvimento e os resultados podem estar desatualizados.</p>
-
+        <section id="impact">
+            <h2>Nosso Impacto</h2>
+            <p>Estamos transformando o futuro da reciclagem. Até hoje, já impactamos mais de 10 mil pessoas por meio de
+                eventos, palestras e workshops, além de termos reciclado toneladas de plásticos oceânicos.</p>
+            <a href="impact.html" class="btn">Saiba mais sobre o impacto</a>
         </section>
     </main>
 
-    <footer id="footer">
-        <p>&copy; 2024 Projeto Casa Plastica. <br> Todos os direitos reservados.</p>
-    </footer>
-
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjAoAGCBYq6grg_aBga7w7DTnOhvCZFI8&libraries=places&loading=async"></script>
+    <div id="footer"></div>
+    
     <script src="main.js"></script>
-    <script src="map.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
+
 
 </html>
