--- a/projetos/mexirica/manual.html
+++ b/projetos/mexirica/manual.html
@@ -75,7 +75,7 @@
 
             <div id="feedback">
                 <p>Se houver problemas ou feedback, envie um e-mail para <a
-                        href="mailto:casaplastica@gmail.com">casaplastica@gmail.com</a>.</p>
+                        href="mailto:projetocasaplastica@gmail.com">projetocasaplastica@gmail.com</a>.</p>
             </div>
         </section>
     </main>
